# rust_webrtc_stream

./: LICENSE  README.md
.github/workflows/: build-and-release.yml
webrtc_stream_client/: README.md  package.json  pnpm-lock.yaml
webrtc_stream_client/src/: App.vue
webrtc_stream_client/src/components/: Stream.vue
webrtc_stream_server/: Cargo.toml  Dockerfile
webrtc_stream_server/src/: auth.rs  main.rs  token.rs  user.rs  ws.rs
webrtc_stream_server/src/api/: api_response.rs
